--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,15 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.25'
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('src/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - name: Run Unit Tests and Collect Coverage
         run: |
           cd src
@@ -53,6 +62,11 @@ jobs:
         if: always()
         run: |
           cp ../.coverage_current ../.coverage_previous
+      - name: Cache Coverage File
+        uses: actions/cache@v4
+        with:
+          path: .coverage_previous
+          key: coverage-${{ github.ref }}
       - name: Build
         run: |
           cd src
