--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,13 +29,17 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.25'
+      - name: Initialize Go modules
+        run: |
+          cd src
+          go mod tidy
       - name: Cache Go modules
         uses: actions/cache@v4
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('src/go.sum') }}
+          key: ${{ runner.os }}-go-${{ hashFiles('src/go.sum', 'src/go.mod') }}
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Run Unit Tests and Collect Coverage
@@ -62,11 +66,12 @@ jobs:
         if: always()
         run: |
           cp ../.coverage_current ../.coverage_previous
-      - name: Cache Coverage File
-        uses: actions/cache@v4
+      - name: Upload Coverage Data
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          path: .coverage_previous
-          key: coverage-${{ github.ref }}
+          name: coverage-data
+          path: .coverage_current
       - name: Build
         run: |
           cd src
